--- a/index.html
+++ b/index.html
@@ -5,12 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Binar</title>
+    <link rel="stylesheet" href="reset.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <!-- Nav -->
-    <nav class="navbar navbar-expand-lg navbar-light">
+    <nav class="navbar navbar-expand-lg navbar-dark">
         <div class="container-fluid">
             <a class="navbar-brand" href="#">Logo</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -58,13 +59,13 @@
           </div>
 
           <!-- Game -->
-          <div class="about">
-              <div class="container">
+          <div class="games">
+              <div class="container-fluid">
                   <div class="row game">
                       <div class="col-lg-8">
                           <div class="title">
-                              <h4>What's so special?</h4>
-                              <h2>THE GAMES</h2>
+                              <h6>What's so special?</h6>
+                              <h1>The Games</h1>
                           </div>
                       </div>
                       <div class="col-lg-8 mx-auto slide">
@@ -100,14 +101,23 @@
 
               <!-- features -->
               <div class="features">
-                <div class="container">
-                  <div class="row features">
-                    <h6>Hello</h6>
-                  </div>
+                <img class="img-fluid" src="assets/assets/features.jpg" alt="" />
+                <div class="contentfeat">
+                  <h6>What's so special?</h6>
+                  <h1>Features</h1>
+                </div>
+                <div class="rounded">
+                </div>
+                <div class="contentfeat2">
+                  <h6 class="feat1">Traditional Games</h6>
+                  <p class="feat2">If you miss your chilhood, we provide many traditional games here</p>
+                  <h6 class="suit">Game Suit</h6>
+                  <h6 class="tbd">Tbd</h6>
                 </div>
               </div>
 
-
+              <!-- Requirements -->
+              
 
 
 
