mohon dikoreksi lagi

--- a/index.html
+++ b/index.html
@@ -45,8 +45,7 @@
     </div>
         </nav>
         <!-- banner -->
-        <div class="banner">
-            <img src="assets/assets/main-bg.jpg" alt="" />
+        <div class="banner" id="banner-img">
             <div class="content">
               <h2>Play Traditional Game</h2>
               <p>
@@ -55,13 +54,17 @@
               <div class="d-grid gap-2 col-3 mx-auto">
                 <button class="btn " type="button">Play Now</button>
               </div>
+              <div class="bottom-box">
+                <div class="link-text">THE STORY</div>
+                <a href="#games"><img class="link-icon" src="assets/assets/scroll-down.svg" alt="v"></a>
+              </div>
             </div>
           </div>
 
           <!-- Game -->
-          <div class="games">
+          <div class="games" id="games">
               <div class="container-fluid">
-                  <div class="row game">
+                  <div class="row game" id="games-img">
                       <div class="col-lg-8">
                           <div class="title">
                               <h6>What's so special?</h6>
@@ -100,13 +103,30 @@
               </div>
 
               <!-- features -->
-              <div class="features">
-                <img class="img-fluid" src="assets/assets/features.jpg" alt="" />
+              <div class="features" id="features-img">
                 <div class="contentfeat">
                   <h6>What's so special?</h6>
                   <h1>Features</h1>
                 </div>
-                <div class="rounded">
+                <div class="icons">
+                  <a href="#">
+                    <img class="circle-icon" src="assets/assets/circle.svg" alt="circle">
+                  </a>
+                </div>
+                <div class="icons2">
+                  <a href="#">
+                    <img class="vertical-line" src="assets/assets/substract.svg" alt="vertical">
+                  </a>
+                </div>
+                <div class="icons3">
+                  <a href="#">
+                    <img class="circle-icon2" src="assets/assets/circle2.svg" alt="cirle2">
+                  </a>
+                </div>
+                <div class="icons4">
+                  <a href="#">
+                    <img class="circle-icon3" src="assets/assets/circle2.svg" alt="cirle2">
+                  </a>
                 </div>
                 <div class="contentfeat2">
                   <h6 class="feat1">Traditional Games</h6>
@@ -117,8 +137,62 @@
               </div>
 
               <!-- Requirements -->
-              
+              <div class="requirements" id="requirements-img">
+                <div class="container" id="requirements-grid">
+                  <div class="requirements-sys">
+                    <h1 id="title-sys">SYSTEM REQUIREMENTS</h1>
+                  <div class="item">
+                    <h5>OS:</h5>
+                    <p> Windows 7 64-bit only
+                      (No OSX support at this time)
+                    </p>
+                  </div>
+                  <div class="item">
+                    <h5>PROCESSOR:</h5>
+                    <p> Intel Core 2 Duo @ 2.4 GHZ or AMD Athlon X2 @ 2.8 GHZ
+                    </p>
+                  </div>
+                  <div class="item">
+                    <h5>MEMORY:</h5>
+                    <p> 4 GB RAM
+                    </p>
+                  </div>
+                  <div class="item">
+                    <h5>storage:</h5>
+                    <p> 8 GB available space
+                    </p>
+                  </div>
+                  <div class="item">5</div>
+                </div>
+              </div>
+              </div>
 
+              <!-- TOP SCORE -->
+              <div class="container-fluid" id="topscore-img">
+                <div class="row" id="topscore-text">
+                  <div class="col-6">
+                    <div class="card" style="width: 18rem;">
+                      <div class="card-body">
+                        <h5 class="card-title">Special title treatment</h5>
+                        <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+                        <a href="#" class="btn btn-primary">Go somewhere</a>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+                <div class="row" id="topscore-card">
+                  <div class="col-6">
+                    <div class="card" style="width: 18rem;">
+                      <div class="card-body">
+                        <h5 class="card-title">Special title treatment</h5>
+                        <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+                        <a href="#" class="btn btn-primary">Go somewhere</a>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              
 
 
 
