mohon dikoreksi lagi ya kak

--- a/index.html
+++ b/index.html
@@ -101,6 +101,7 @@
                     </div>
                   </div>
               </div>
+              </div>
 
               <!-- features -->
               <div class="features" id="features-img">
@@ -138,59 +139,120 @@
 
               <!-- Requirements -->
               <div class="requirements" id="requirements-img">
-                <div class="container" id="requirements-grid">
-                  <div class="requirements-sys">
-                    <h1 id="title-sys">SYSTEM REQUIREMENTS</h1>
-                  <div class="item">
-                    <h5>OS:</h5>
-                    <p> Windows 7 64-bit only
-                      (No OSX support at this time)
-                    </p>
-                  </div>
-                  <div class="item">
-                    <h5>PROCESSOR:</h5>
-                    <p> Intel Core 2 Duo @ 2.4 GHZ or AMD Athlon X2 @ 2.8 GHZ
-                    </p>
-                  </div>
-                  <div class="item">
-                    <h5>MEMORY:</h5>
-                    <p> 4 GB RAM
-                    </p>
-                  </div>
-                  <div class="item">
-                    <h5>storage:</h5>
-                    <p> 8 GB available space
-                    </p>
-                  </div>
-                  <div class="item">5</div>
+                <div class=" container text-sys">
+                  <span id="system">System</span>
+                  <P>Requirements</P>
                 </div>
-              </div>
+                <div class=" container text-sys2">
+                  <span>Can My Computer Run this Game?</span>
+                </div>
+                <div class="container system-requirements" id="requirement-grid">
+                  <div class="row">
+                    <div class="col col-md-5 col-lg-2 border border-1">
+                      <span id="OS">OS: </span>
+                      <p id="windows">Windows 7 64-bit only
+                        (No OSX support at this time)</p>
+                    </div>
+                    <div class="col col-md-5 col-lg-2 border border-1">
+                      <span id="OS">PROCESSOR: </span>
+                      <p id="windows">Intel Core 2 Duo @ 2.4 GHZ or AMD Athlon X2 @ 2.8 GHZ</p>
+                    </div>
+                  </div>
+                  <div class="row">
+                    <div class="col col-md-5 col-lg-2 border border-1">
+                      <span id="OS">MEMORY: </span>
+                      <p id="windows">4 GB RAM</p>
+                    </div>
+                    <div class="col col-md-5 col-lg-2 border border-1">
+                      <span id="OS">STORAGE: </span>
+                      <p id="windows">8 GB available space</p>
+                    </div>
+                    </div>
+                    <div class="row">
+                      <div class="col col-md-5 col-lg-4 border border-1">
+                        <span id="OS">GRAPCHICS: </span>
+                        <p id="windows">NVIDIA GeForce GTX 660 2GB or AMD Radden HD 7850 2GB DirectX11 (Shader Model 5)</p>
+                      </div>
+                    </div>
+                    </div>
+                  </div>
+                </div>
               </div>
 
               <!-- TOP SCORE -->
               <div class="container-fluid" id="topscore-img">
-                <div class="row" id="topscore-text">
+                <div class="title-top">
+                  <span class="subtitle-top">top scores</span>
+                  <p>This top score from various games provided on this platform</p>
+                  <a href="#" class="btn btn-warning">see more</a>
+                </div>
+                <div class="container">
+                <div class="row" id="evan-card">
                   <div class="col-6">
-                    <div class="card" style="width: 18rem;">
+                    <div class="card" style="width: 25rem; height: 10rem;">
                       <div class="card-body">
-                        <h5 class="card-title">Special title treatment</h5>
-                        <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-                        <a href="#" class="btn btn-primary">Go somewhere</a>
+                        <div class="border-circle"></div>
+                        <img src="assets/assets/evan.jpg" alt="">
+                        <img class="twitter" src="assets/assets/twitter.svg" alt="">
+                        <span class="card-title">
+                          <h4>evan lahti</h4>
+                          <p>PC Gamer</p>
+                        </span>
+                        <p class="card-text">
+                          <span id="text-testi">“One of my gaming highlights of the year.”</span>
+                          <span class="date">June 18, 2021</span>
+                        </p>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+
+              <div class="container">
+                <div class="row" id="jade-card">
+                  <div class="col-6">
+                    <div class="card" style="width: 25rem; height: 12rem;">
+                      <div class="card-body">
+                        <div class="border-circle"></div>
+                        <img id="jade" src="assets/assets/jade.jpg" alt="">
+                        <img class="twitter" src="assets/assets/twitter.svg" alt="">
+                        <span class="card-title">
+                          <h4>jade griffin</h4>
+                          <p>Nerdreactor</p>
+                        </span>
+                        <p class="card-text">
+                          <span id="text-testi">“The next big thing in the world of streaming and survival games.”
+                          </span>
+                          <span class="date2">July 10, 2021</span>
+                        </p>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              </div>
+
+              <div class="container">
+                <div class="row" id="aaron-card">
+                  <div class="col-6">
+                    <div class="card" style="width: 25rem; height: 12rem;">
+                      <div class="card-body">
+                        <div class="border-circle"></div>
+                        <img id="aaron" src="assets/assets/aaron.jpg" alt="">
+                        <img class="twitter" src="assets/assets/twitter.svg" alt="">
+                        <span class="card-title">
+                          <h4>aaron williams</h4>
+                          <p>Uproxx</p>
+                        </span>
+                        <p class="card-text">
+                          <span id="text-testi">“Snoop Dogg Playing The Wildly Entertaining ‘SOS’ Is Ridiculous.”
+                          </span>
+                          <span class="date3">December 24, 2018</span>
+                        </p>
                       </div>
                     </div>
                   </div>
                 </div>
-                <div class="row" id="topscore-card">
-                  <div class="col-6">
-                    <div class="card" style="width: 18rem;">
-                      <div class="card-body">
-                        <h5 class="card-title">Special title treatment</h5>
-                        <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-                        <a href="#" class="btn btn-primary">Go somewhere</a>
-                      </div>
-                    </div>
-                  </div>
-                </div>
+              </div>
               </div>
               
 
