tugas challenge chapter 3

--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
 
               <!-- Requirements -->
               <div class="requirements" id="requirements-img">
-                <div class=" container text-sys">
+                <div class="container text-sys">
                   <span id="system">System</span>
                   <P>Requirements</P>
                 </div>
@@ -184,7 +184,9 @@
                 <div class="title-top">
                   <span class="subtitle-top">top scores</span>
                   <p>This top score from various games provided on this platform</p>
-                  <a href="#" class="btn btn-warning">see more</a>
+                  <a href="#" class="btn btn-warning btn-see">
+                    <span>See More</span>
+                  </a>
                 </div>
                 <div class="container">
                 <div class="row" id="evan-card">
@@ -254,6 +256,51 @@
                 </div>
               </div>
               </div>
+
+              <!-- NewLetter -->
+
+              <div class="newsletter" id="news-img">
+                <div class="container-fluid">
+                  <div class="pictures">
+                    <img src="assets/assets/image .png" alt="">
+                    <div class="kotak"></div>
+                  </div>
+
+                  <div class="text-news">
+                    <span>Want to stay in touch?</span>
+                    <h1>newsletter SUBSCRIBE </h1>
+                  </div>
+                  <div class="text-news2">
+                    <p>In order to start receiving our news, all you have to do is enter your email address. Everything else will be taken care of by us. We will send you emails containing information about game. We don’t spam.</p>
+                  </div>
+                  <a href="#" class="btn btn-email">
+                    <span class="text-muted">Your email address</span>
+                    <p>youremail@binar.co.id</p>
+                  </a>
+                  <a href="#" class="btn btn-subscribe">
+                    <span>Subscribe now</span>
+                  </a>
+                  <div class="d-flex info">
+                    <span class="subinfo1">main</span>
+                    <span class="subinfo2">about</span>
+                    <span class="subinfo3">game features</span>
+                    <span class="subinfo4">system requirement</span>
+                    <span class="subinfo5">quotes</span>
+                    <img class="iconsosmed" src="assets/assets/facebook.svg" alt="fb">
+                    <img class="iconsosmed" src="assets/assets/twitter.svg" alt="twt">
+                    <img class="iconsosmed" src="assets/assets/Vector.svg" alt="yt">
+                    <img class="iconsosmed" src="assets/assets/twitch.svg" alt="bm">
+                  </div>
+                  <hr color="white" width="85%" size="3vw" align="center">
+
+                  <footer>
+                    <span class="footer1"> &#169; 2018 Your Games, Inc. All Rights Reserved</span>
+                    <span class="d-flex justify-content-end footer2">Privacy Policy | Terms of Services | Code of Conduct </span>
+                  </footer>
+                </div>
+              </div>
+
+
               
 
 
