--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                 Experience New Traditional Game Play
               </p>
               <div class="d-grid gap-2 col-3 mx-auto">
-                <button class="btn " type="button">Play Now</button>
+                <a href="game.html"><button class="btn " type="button">Trial</button></a>
               </div>
               <div class="bottom-box">
                 <div class="link-text">THE STORY</div>
